--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,7 +14,7 @@
     This friendly message is coming from:
     <ul>
         <li>Your controller at <a href="{{path('song')}}">src/Controller/HomeController.php</a></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/utilisateur/git/Jukebox/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
+        <li>Your template at <a href="{{ path('category')}}">templates/home/index.html.twig</a></li>
     </ul>
 </div>
 {% endblock %}
