--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Asap:wght@100&family=Cardo&family=Crimson+Text&family=IBM+Plex+Sans+Condensed&family=Rampart+One&display=swap" rel="stylesheet">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-            <link href="{{ asset('assets/commun.css') }}" rel="stylesheet">
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link
+		href="https://fonts.googleapis.com/css2?family=Asap:wght@100&family=Cardo&family=Crimson+Text&family=IBM+Plex+Sans+Condensed&family=Rampart+One&display=swap" rel="stylesheet">
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block header %}
-          {%  include "partials/_header.html.twig" %}
-        {% endblock %}
-       
-        {% block body %}{% endblock %}
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+			<link href="{{ asset('assets/commun.css') }}" rel="stylesheet">
+			<link href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" rel="stylesheet"/>
+			<link href="{{ asset('assets/home.css')}}" rel="stylesheet">
+		{% endblock %}
+
+	</head>
+	<body>
+		{% block header %}
+			{%  include "partials/_header.html.twig" %}
+		{% endblock %}
+
+		{% block body %}{% endblock %}
 
 
-         {% block footer %}
-           {%  include "partials/_footer.html.twig" %}
-        {% endblock %}
-    </body>
+		{% block footer %}
+			{%  include "partials/_footer.html.twig" %}
+		{% endblock %}
+
+	</body>
+	{% block javascripts %}
+		{{ encore_entry_script_tags('app') }}
+	{% endblock %}
 </html>
