--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,20 +1,71 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Hello HomeController!
+{% endblock %}
+
+
+{% block javascripts %}
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jquery.jplayer.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+	<script src="{{ asset('assets/js/homePage.js') }}"></script>
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="swiper-container" data-mydata="{{ myData|json_encode|raw }}">
+		<div class="swiper-wrapper">
+			{% for data in myData %}
+				<div class="swiper-slide" data-id="{{ data.categoryId }}">
+					<img src="{{ asset('/img/categories/' ~ data.categoryPath) }}" alt="{{ data.categoryAlt }}" width="500px">
+					<h1>{{ data.categoryName }}</h1>
+				</div>
+			{% endfor %}
+		</div>
+	</div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <a href="{{path('song')}}">src/Controller/HomeController.php</a></li>
-        <li>Your template at <a href="{{ path('category')}}">templates/home/index.html.twig</a></li>
-    </ul>
-</div>
+	<ul id="song-list"></ul>
+
+	<div id="jquery_jplayer_1" class="jp-video jp-video-270p">
+		<div class="jp-type-single">
+			<div class="jp-gui jp-interface">
+				<ul class="jp-controls">
+					<li>
+						<a href="https://storage.cloud.google.com/folk-playlist/Marcus%20Mumford%20-%20How.mp3" class="jp-play" tabindex="1">play</a>
+					</li>
+					<li>
+						<a href="javascript:;" class="jp-pause" tabindex="1">pause</a>
+					</li>
+					<li>
+						<a href="javascript:;" class="jp-stop" tabindex="1">stop</a>
+					</li>
+				</ul>
+				<div class="jp-progress">
+					<div class="jp-seek-bar">
+						<div class="jp-play-bar"></div>
+					</div>
+				</div>
+				<div class="jp-volume-controls">
+					<div class="jp-volume-bar">
+						<div class="jp-volume-bar-value"></div>
+					</div>
+					<ul class="jp-toggles">
+						<li>
+							<a href="javascript:;" class="jp-mute" tabindex="1">mute</a>
+						</li>
+						<li>
+							<a href="javascript:;" class="jp-unmute" tabindex="1">unmute</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="jp-no-solution">
+				<span>Update Required</span>
+				To play the media you will need to either update your browser to a recent version or update your
+				<a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+			</div>
+		</div>
+	</div>
+
+
 {% endblock %}
