--- a/public/assets/login.css
+++ b/public/assets/login.css
@@ -1,177 +1,212 @@
- /* .form_row label {
-    display: row;
-    font-size: 25px;
-    font-family: Asap;
-    font-weight: bold;
-    justify-content: space-between;
-    
-  }  */
-
-form{
-  max-width: 500px;
-  margin: 0 auto;
+input, button {
+  width: 100%;
+  height: 50px;
+  margin-bottom: 20px;
 }
+
+button {
+  margin-top: 20px;
+}
+
+#form_Annuler {
+  float: right;
+  width: 40%;
+  height: 40px;
+  margin-left: 10%;
+  border: none;
+  border-radius: 15px;
+  background-color: black;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+#form_Valider {
+  float: left;
+  width: 45%;
+  height: 40px;
+  margin-right: 5%;
+  border: none;
+  border-radius: 15px;
+  background-color: black;
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#disque-container {
+  position: relative;
+}
+#lecteur-container {
+  position: absolute;
+  top: 152px;
+  right: 0;
+  margin: 0 auto;
+ 
+  margin-right: 800px; 
+}
+
 h2 {
   font-family: Asap;
   text-transform: uppercase;
   color: white;
-  font-size: 25px;
+  font-size: 12px;
   position: absolute;
   top: 73%;
   width: 100vw;
   text-align: center;
+  top: 52%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
 }
+
 #containerh2 {
-  background: url(/img/disc.png) no-repeat center;
+  background: url(img/disc.png) no-repeat center;
   background-size: contain;
-  height: 30vh;
-  padding-bottom: 2vh;
+  height: 20vh;
+  padding-bottom: 10vh;  
+  justify-self: center;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: -50px;
+}
+
+#lecteur-container{
+  background: url(img/headshell.png) no-repeat center;
+  background-size: contain;
+  height: 20vh;
+  justify-self: center;
+  text-align: center;
+  display: flex;
+  justify-content:right;
+  position: relative;
+  
+}
+
+#disque-container {
+  position: absolute;
+  top: 38%;
+  left: 0;
+  right: 0;
+  margin: -10vh auto 0;
+  transform: translateY(-50%);
+  /* Ajoutez ici d'autres styles pour positionner votre disque */
+}
+
+form {
+  width: 100%;
+  max-width: 500px; 
+  margin: 0 auto;
+  margin-top: 50px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: calc(25vh - 5vh - 25px);
+  
+}
+
+.burger-menu {
   position: relative;
   display: flex;
-  justify-self: center;
+  top: 600px;
+  left: 60px;
+}
+
+.burger-menu input[type="checkbox"] {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+.burger-menu label {
+  cursor: pointer;
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+
+.burger-menu span {
+  background: #000;
+  display: block;
+  height: 3px;
+  position: absolute;
+  top: 50%;
+  margin-top: -1px;
+  transition: all 0.3s ease-in-out;
+  width: 25px;
+}
+
+.burger-menu span:first-child {
+  transform: translateY(-8px);
+}
+
+.burger-menu span:last-child {
+  transform: translateY(8px);
+}
+
+.burger-menu input[type="checkbox"]:checked ~ label span:first-child {
+  transform: translateY(0) rotate(45deg);
+}
+
+.burger-menu input[type="checkbox"]:checked ~ label span:last-child {
+  transform: translateY(0) rotate(-45deg);
+}
+
+.burger-menu input[type="checkbox"]:checked ~ label span:nth-child(2) {
+  opacity: 0;
+}
+  
+.burger-menu input[type="checkbox"]:checked ~ ul {
+  opacity: 1;
+  visibility: visible;
+}
+
+.burger-menu ul {
+  background: #000;
+  border: 1px solid #000;
+  display: inline-block;
+  opacity: 0;
+  position: absolute;
+  right: 50;
+  top: 50%;
+  transition: all 0.3s ease-in-out;
+  visibility: hidden;
+  z-index: 2;
+}
+
+.burger-menu ul li {
+  display: block;
+  padding: 10px;
   text-align: center;
 }
 
-/* 
-
-.form_start {
-  margin-bottom: 20px;
-}
-
-.form_row label {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 5px;
-}
-
-.form_row {
-  display: block;
-  width: 100%;
-  height: 45px;
-  padding: 10px;
-  font-size: 16px;
-  line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: .25rem;
-  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-.form-control:focus {
-  color: #495057;
-  background-color: #fff;
-  border-color: #80bdff;
-  outline: 0;
-  box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .25);
-}
-
-.form-check-input {
-  width: 25px;
-  height: 25px;
-  margin-right: 10px;
-  vertical-align: middle;
-}
-
-.form-check-label {
-  font-weight: normal;
-} */
-
-/* Style pour le formulaire */
-/* form {
-  max-width: 500px;
-  margin: 0 auto;
-  display: block;
-  padding: 20px;
-} */
-
-/* label{
-  display: flex;
-  margin: 15px;
-  font-size: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-shadow: none;
-  color: #333;
-  font-size: 15px;
-  padding: 8px;
-  width: 150%;
-  margin-top: 5px;
-}
-*/
-
-input{
-  display: flex;
-  margin: 15px;
-  font-size: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: none;
-  color: #333;
-  font-size: 15px;
-  padding: 8px;
-  width: 150%;
-  margin-top: 5px;
-  color:black;
-
-}
-
-/* 
-
-  .password-input,
-  .lastName-input,.firstName-input,
-  .email-input
-   {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-shadow: none;
-    color: #333;
-    font-size: 15px;
-    padding: 8px;
-    width: 150%;
-    margin-top: 5px;
-    margin-bottom: 10px;
-}
-
-.password-input:focus,
-.password-input:focus,
-  .lastName-input:focus,.firstName-input:focus,
-  .email-input:focus
-{
-    border-color: #777;
-    box-shadow: none;
-    outline: none;
-}
-
-
-.form_start{
-  display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    font-size: 25px;
-    font-family: Asap;
-    font-weight: bold;
-    justify-content: space-between;
-    
-  }  */
-
-
-  
-.btn {
-    background-color: black;
-    border: 1px solid black;
-    border-radius: 15px;
-    box-shadow: none;
-    color: #333;
-    font-size: 15px;
-    margin: 60px;
-    width: 25%;
-    margin-top: 5px;
-    margin-bottom: 10px;
+.burger-menu ul li a {
   color: #fff;
-  } 
+  display: block;
+  font-size: 20px;
+  text-align: start;
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
