--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,9 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}Hello LoginController!{% endblock %}
 
 {% block body %}
-
 
 
 
@@ -25,19 +24,12 @@
   </div>
 </div>
 </div>
-
+  
     <div class="form-container">
-        {{ form(inscription) }}
+        {{ form(connexion) }}
       </div>
       
   
-      
-  
-  
-
-       
-
-
-
-
 {% endblock %}
+
+
