--- a/public/assets/connexion.css
+++ b/public/assets/connexion.css
@@ -1,17 +1,19 @@
+
 input, button {
     width: 100%;
     height: 50px;
     margin-bottom: 50px;
   }
   
-  #form_Valider {
-    width: 60%;
+  
+  #form_valider {
+    width: 80%;
     height: 40px;
     border: none;
     border-radius: 15px;
     background-color: black;
     color: #fff;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
     text-decoration: none;
     cursor: pointer;
@@ -100,7 +102,7 @@ input, button {
     position: relative;
     display: flex;
     top: 550px;
-    left: 10px;
+    left: 50px;
   }
   
   .burger-menu input[type="checkbox"] {
