--- a/public/assets/favorite.css
+++ b/public/assets/favorite.css
@@ -1,1 +1,9 @@
+#containerFavorite {
+  margin-top: 10vh;
+  margin-left: 5vw;
+  margin-right: 5vw;
+}
 
+.navbar-toggler-icon {
+  color: black;
+}
