--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,7 @@
 		{% block stylesheets %}
 			<link href="{{ asset('assets/commun.css') }}" rel="stylesheet">
 			<link href="{{ asset('assets/profile.css') }}" rel="stylesheet">
+			<link href="{{ asset('assets/favorite.css') }}" rel="stylesheet">
 		{% endblock %}
 
 		{% block javascripts %}
