--- a/templates/favorite/index.html.twig
+++ b/templates/favorite/index.html.twig
@@ -4,43 +4,40 @@
 {% endblock %}
 
 {% block body %}
+	<div id="containerFavorite">
+		<h3>Ma playlist</h3>
 
-	<h3>Ma playlist</h3>
+		<table class="table">
 
-	<table class="table">
-
-		<tbody>
-			{% for favorite in favorites %}
-				<tr>
-					<td>
-						<h4>{{favorite.artist}}</h4>
-					</td>
-					<td>
-						<h5>{{favorite.title}}</h5>
-					</td>
-					<td>
-						<i class="bi bi-play-fill"></i>
-					</td>
-					<td>
-						<form method="post" action="{{ path('app_favorite_delete', {'id': favorite.id}) }}" onsubmit="return confirm('Etes-vous sur de vouloir retirer cette musique de vos favoris ?');">
-							<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ favorite.id) }}">
-							<button class="btn">
-								<i class="bi bi-trash-fill"></i>
-							</button>
-						</form>
-					</td>
-				</tr>
+			<tbody>
+				{% for favorite in favorites %}
+					<tr>
+						<td>
+							<h4>{{favorite.artist}}</h4>
+						</td>
+						<td>
+							<h5>{{favorite.title}}</h5>
+						</td>
+						<td>
+							<i class="bi bi-play-fill"></i>
+						</td>
+						<td>
+							<form method="post" action="{{ path('app_favorite_delete', {'id': favorite.id}) }}" onsubmit="return confirm('Etes-vous sur de vouloir retirer cette musique de vos favoris ?');">
+								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ favorite.id) }}">
+								<button class="btn">
+									<i class="bi bi-trash-fill"></i>
+								</button>
+							</form>
+						</td>
+					</tr>
+				</tbody>
 			</tbody>
-		</tbody>
-	</td>
-{% else %}
-	<tr>
-		<td colspan="2">no records found</td>
-	</tr>
-{% endfor %}</table><nav class="navbar navbar-dark fixed-bottom">
+		</td>
+	{% endfor %}
+</div></table><nav class="navbar navbar-dark fixed-bottom">
 <div class="container-fluid">
 	<button id="btnNavBarFavorite" class="navbar-toggler bottom-0 end-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
+		<span class="navbar-toggler-icon" style="color: black !important"></span>
 	</button>
 	<div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
 		<div class="offcanvas-header">
@@ -50,7 +47,7 @@
 		<div class="offcanvas-body">
 			<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Acceuil</a>
+					<a class="nav-link active" aria-current="page" href="#">Accueil</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Profil</a>
