--- a/templates/player.html.twig
+++ b/templates/player.html.twig
@@ -2,9 +2,9 @@
 
 {% block title %}Hello Player!
 {% endblock %}
-{% block javascripts %}
-	<script src="{{ asset('assets/js/homePage.js') }}"></script>
 
+{% block javascripts %}
+	<script src="{{ asset('assets/js/player.js') }}"></script>
 {% endblock %}
 
 {% block body %}
