--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -12,7 +12,7 @@
     </div>
     <div id="containerh2">
          <img src="{{ asset('img/disc.png') }}" alt="Disque vinyle"> 
-      <h2>INSCRIPTION</h2>
+      <h2>Connexion</h2>
    
   <div class="burger-menu">
     <input type="checkbox" id="burger-toggle">
