--- a/templates/person/_form.html.twig
+++ b/templates/person/_form.html.twig
@@ -1,4 +1,21 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div id="profilContainer">
+	<div class="form-group">
+		{{ form_label(form.firstname) }}
+		{{ form_widget(form.firstname, {'attr': {'class': 'form-control'}}) }}
+	</div>
+	<div class="form-group">
+		{{ form_label(form.lastname) }}
+		{{ form_widget(form.lastname, {'attr': {'class': 'form-control'}}) }}
+	</div>
+	<div class="form-group">
+		{{ form_label(form.email) }}
+		{{ form_widget(form.email, {'attr': {'class': 'form-control'}}) }}
+	</div>
+	<div class="form-group">
+		{{ form_label(form.password) }}
+		{{ form_widget(form.password, {'attr': {'class': 'form-control', 'type': 'password', 'id': 'form_password'}}) }}
+	</div>
+</div>
+{# <button class="btn">{{ button_label|default('Save') }}</button> #}
 {{ form_end(form) }}
