--- a/templates/person/edit.html.twig
+++ b/templates/person/edit.html.twig
@@ -1,13 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Person{% endblock %}
+{% block title %}Edit Person
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Person</h1>
+	<a href="{{ path('app_person_index') }}">
+		<i class="bi bi-arrow-left-short"></i>
+	</a>
 
-    {{ include('person/_form.html.twig', {'button_label': 'Update'}) }}
+	<h1>Modifier mon profil</h1>
 
-    <a href="{{ path('app_person_index') }}">back to list</a>
-
-    {{ include('person/_delete_form.html.twig') }}
+	<div id="btnEditProfil">
+		{{ include('person/_form.html.twig', {'button_label': 'Valider'}) }}
+		{{ include('person/_delete_form.html.twig') }}
+	</div>
 {% endblock %}
