--- a/templates/person/show.html.twig
+++ b/templates/person/show.html.twig
@@ -1,38 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Person{% endblock %}
+{% block title %}Person
+{% endblock %}
 
 {% block body %}
-    <h1>Person</h1>
+	<h1>Person</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ person.id }}</td>
-            </tr>
-            <tr>
-                <th>Firstname</th>
-                <td>{{ person.firstname }}</td>
-            </tr>
-            <tr>
-                <th>Lastname</th>
-                <td>{{ person.lastname }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ person.email }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ person.password }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ person.id }}</td>
+			</tr>
+			<tr>
+				<th>Firstname</th>
+				<td>{{ person.firstname }}</td>
+			</tr>
+			<tr>
+				<th>Lastname</th>
+				<td>{{ person.lastname }}</td>
+			</tr>
+			<tr>
+				<th>Email</th>
+				<td>{{ person.email }}</td>
+			</tr>
+			<tr>
+				<th>Password</th>
+				<td>{{ person.password }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('app_person_index') }}">back to list</a>
+	<a href="{{ path('app_person_index') }}">back to list</a>
 
-    <a href="{{ path('app_person_edit', {'id': person.id}) }}">edit</a>
+	<a href="{{ path('app_person_edit', {'id': person.id}) }}">edit</a>
 
-    {{ include('person/_delete_form.html.twig') }}
+	{{ include('person/_delete_form.html.twig') }}
 {% endblock %}
