--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,10 +18,12 @@
 
 		{% block stylesheets %}
 			{# {{ encore_entry_link_tags('app') }} #}
+			<link rel="stylesheet" href="/path/to/build/mediaelementplayer.min.css"/>
 			<link href="{{ asset('assets/commun.css') }}" rel="stylesheet">
 			<link href="{{ asset('assets/profile.css') }}" rel="stylesheet">
 			<link href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" rel="stylesheet"/>
 			<link href="{{ asset('assets/home.css')}}" rel="stylesheet">
+			<link href="{{ asset('assets/player.css')}}" rel="stylesheet">
 
 		{% endblock %}
 
@@ -35,18 +37,21 @@
 
 		{% block body %}{% endblock %}
 
-		{% block footer %}
-			{%  include "partials/_footer.html.twig" %}
-		{% endblock %}
+		{# {% block footer %}
+					{%  include "partials/_footer.html.twig" %}
+				{% endblock %} #}
 	</body>
 
 	{% block javascripts %}
 		{{ encore_entry_script_tags('app') }}
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jquery.jplayer.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.16/mediaelement-and-player.min.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/4.2.16/mediaelementplayer.min.css"/>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 		<script src="{{ asset('assets/js/homePage.js') }}"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+		<script src="{{ asset('assets/js/player.js') }}"></script>
+
 	{% endblock %}
-	
+
 </html>
