--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,21 +3,50 @@
 {% block title %}Hello HomeController!
 {% endblock %}
 
-
 {% block body %}
 
-	<div class="swiper-container" data-mydata="{{ myData|json_encode|raw }}">
-		<div class="swiper-wrapper">
-			{% for data in myData %}
-				<div class="swiper-slide" data-id="{{ data.categoryId }}">
-					<img src="{{ asset('/img/categories/' ~ data.categoryPath) }}" alt="{{ data.categoryAlt }}" width="500px">
-					<h1>{{ data.categoryName }}</h1>
-				</div>
-			{% endfor %}
+	<section id="swiperAndList">
+		<div class="swiper-container" data-mydata="{{ myData|json_encode|raw }}">
+			<div class="swiper-wrapper">
+				{% for data in myData %}
+					<div class="swiper-slide" data-id="{{ data.categoryId }}">
+						<img src="{{ asset('/img/categories/' ~ data.categoryPath) }}" alt="{{ data.categoryAlt }}">
+						<h1>{{ data.categoryName }}</h1>
+					</div>
+				{% endfor %}
+			</div>
 		</div>
-	</div>
 
-	<ul id="song-list"></ul>
+		<ul id="song-list"></ul>
+	</section>
+{% endblock %}
+{% block footer %}
 
+	<nav class="navbar navbar-dark fixed-bottom">
+		<div class="container-fluid">
+			<button class="navbar-toggler bottom-0 end-0 bg-black " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+				<div class="offcanvas-header">
+					<h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+				</div>
+				<div class="offcanvas-body text-light">
+					<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="#">Admin</a>
+						</li>
+						<li>
+							<a class="nav-link" aria-current="page" href="#">Inscription</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Connexion</a>
+						</li>
+					</ul>
 
+				</div>
+			</div>
+		</div>
+	</nav>
 {% endblock %}
