work on the navbar

--- a/public/assets/profil.css
+++ b/public/assets/profil.css
@@ -22,11 +22,23 @@
 
 .formProfilInformations {
   background-color: white;
-  border-radius: 20px;
   padding: 5px;
   /* font-size: 30px; */
   width: 50vw;
 }
 #containerProfil {
   margin-left: 25vw;
+  margin-top: 5vh;
+  margin-bottom: 4vh;
+}
+
+.form-control {
+  width: 50vw;
+}
+#btnValidateEditProfil {
+  text-align: center;
+  margin-bottom: 5vh;
+}
+#btnDeleteProfil {
+  text-align: center;
 }
