--- a/templates/favorite/index.html.twig
+++ b/templates/favorite/index.html.twig
@@ -26,29 +26,13 @@
 					<form method="post" action="{{ path('app_favorite_delete', {'id': favorite.id}) }}" onsubmit="return confirm('Etes-vous sur de vouloir retirer cette musique de vos favoris ?');">
 						<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ favorite.id) }}">
 						<button class="btn">
-							<i class="bi bi-trash-fill"></i>
+							<a href="{{ path('player') }}">
+								<iclass="bibi-trash-fill"></a>
+							</i>
 						</button>
-					</form>
+					</td>
 				</td>
 			</tr>
-		</tbody>
+		</form>
 	</tbody>
-</td>{% endfor %}</div></table><nav class="navbar body-tertiary fixed-bottom"><div class="container-fluid"><button id="btnNavBarFavorite" class="navbar-toggler bottom-0 end-0 text-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon "></span></button><div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-<div class="offcanvas-header">
-	<h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
-	<button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-</div>
-<div class="offcanvas-body">
-	<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-		<li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="#">Accueil</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Profil</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link active" aria-current="page" href="#">Déconnexion</a>
-		</li>
-	</ul>
-</div></div></nav>{% endblock %}
+</td></tr></tbody></tbody></td>{% endfor %}</div></table>{% endblock %}
