--- a/templates/person/edit.html.twig
+++ b/templates/person/edit.html.twig
@@ -8,10 +8,45 @@
 		<i class="bi bi-arrow-left-short"></i>
 	</a>
 
-	<h1>Modifier mon profil</h1>
+	<div id="containerh2">
+		<h2>Modifier</h2>
+	</div>
 
 	<div id="btnEditProfil">
 		{{ include('person/_form.html.twig', {'button_label': 'Valider'}) }}
 		{{ include('person/_delete_form.html.twig') }}
 	</div>
-{% endblock %}
+
+
+	<nav class="navbar body-tertiary fixed-bottom ">
+		<div class="container-fluid ">
+			<a class="navbar-brand" href="#"></a>
+			<button id="btnNavBarFavorite" class="navbar-toggler bottom-0 end-0 text-dark rounded-circle" style="width: 80px; height: 80px;" type=" button" data-bs-toggle=" offcanvas" data-bs-target=" #offcanvasDarkNavbar" aria-controls=" offcanvasDarkNavbar" aria-label=" toggle navigation">
+				<span class="navbar-toggler-icon "></span>
+			</button>
+			<div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+				<div class="offcanvas-header">
+					<h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+				</div>
+				<div class="offcanvas-body">
+					<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+						<li class="nav-item">
+							<a class="nav-link active text-light" aria-current="page" href="{{ path('home') }}">Accueil</a>
+						</li>
+						{% if app.user %}
+							<li class="nav-item">
+								<a class="nav-link active text-light" aria-current="page" href="{{ path('favorite') }}">Favoris</a>
+							</li>
+						{% endif %}
+						<li class="nav-item">
+							<a class="nav-link  text-light" href="{{ path('person') }}">Profil</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active  text-light" aria-current="page" href="#">Déconnexion</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	{% endblock %}
