--- a/public/assets/profil.css
+++ b/public/assets/profil.css
@@ -28,7 +28,7 @@
 }
 #containerProfil {
   margin-left: 25vw;
-  margin-top: 5vh;
+  /* margin-top: 5vh; */
   margin-bottom: 4vh;
 }
 
@@ -41,4 +41,34 @@
 }
 #btnDeleteProfil {
   text-align: center;
+}
+
+/* @media only screen and (max-width: 768px) {
+  footer {
+    background-color: black;
+    width: 100vw;
+    height: 10vh;
+    position: fixed;
+    bottom: 0;
+  }
+} */
+
+@media only screen and (min-width: 1024px) {
+  footer {
+    background-color: black;
+    width: 100vw;
+    height: 8vh;
+    position: fixed;
+    bottom: 0;
+    margin-top: 10vh;
+    /* z-index: 9999; */
+  }
+
+  .offcanvas-body {
+    align-self: center;
+  }
+  .nav-item {
+    /* margin-right: 10vw; */
+    font-size: 20px;
+  }
 }
