--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
 
 		{% block stylesheets %}
 			{# {{ encore_entry_link_tags('app') }} #}
+            <link href="{{ asset('assets/dashboardHome.css') }}" rel="stylesheet">
 			<link href="{{ asset('assets/commun.css') }}" rel="stylesheet">
 			<link href="{{ asset('assets/profile.css') }}" rel="stylesheet">
 			<link href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" rel="stylesheet"/>
@@ -41,6 +42,7 @@
 	</body>
 	{% block javascripts %}
 		{{ encore_entry_script_tags('app') }}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jquery.jplayer.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
