--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -1,26 +1,28 @@
-{% extends 'base.html.twig' %}
+
 
 {% block title %}Category{% endblock %}
 
+{% block stylesheets %}
+    <link href="{{ asset('assets/dashboardHome.css') }}" rel="stylesheet">
+{% endblock %}
+
 {% block body %}
-    <h1>Category</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ category.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ category.name }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<div class="swiper-container" data-mydata="{{ myData|json_encode|raw }}">
+			{% for data in myData %}
+				<div class="show_category">
+					<div class="swiper-slide" data-id="{{ data.categoryId }}">
+						<img src="{{ asset('/img/categories/' ~ data.categoryPath) }}" alt="{{ data.categoryAlt }}" width="300px" height="200px">
+						<h1>{{ data.categoryName }}</h1>
+					</div>
+					<div class="admin_one_category">
+						<i class="fa fa-pencil" style="font-size:36px"></i>
+						<i class="fa fa-trash-o" style="font-size:36px"></i>
+					</div>
+				</div>
+			{% endfor %}
+	</div>
 
-    <a href="{{ path('app_category_index') }}">back to list</a>
-
-    <a href="{{ path('app_category_edit', {'id': category.id}) }}">edit</a>
 
     {{ include('category/_delete_form.html.twig') }}
 {% endblock %}
