--- a/templates/song/show.html.twig
+++ b/templates/song/show.html.twig
@@ -1,38 +1,24 @@
-{% extends 'base.html.twig' %}
 
 {% block title %}Song{% endblock %}
 
 {% block body %}
     <h1>Song</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ song.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ song.title }}</td>
-            </tr>
-            <tr>
-                <th>Artist</th>
-                <td>{{ song.artist }}</td>
-            </tr>
-            <tr>
-                <th>Duration</th>
-                <td>{{ song.duration }}</td>
-            </tr>
-            <tr>
-                <th>Path_song</th>
-                <td>{{ song.pathSong }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<div class="swiper-container" data-mydata="{{ myData|json_encode|raw }}">
+			{% for data in myData %}
+				<div class="show_category">
+					<div class="swiper-slide" data-id="{{ data.categoryId }}">
+						<img src="{{ asset('/img/categories/' ~ data.categoryPath) }}" alt="{{ data.categoryAlt }}" width="300px" height="200px">
+						<h1>{{ data.categoryName }}</h1>
+					</div>
+					<div class="admin_one_category">
+						<i class="fa fa-pencil" style="font-size:36px"></i>
+						<i class="fa fa-trash-o" style="font-size:36px"></i>
+					</div>
+				</div>
+			{% endfor %}
+	</div>
 
-    <a href="{{ path('app_song_index') }}">back to list</a>
-
-    <a href="{{ path('app_song_edit', {'id': song.id}) }}">edit</a>
 
     {{ include('song/_delete_form.html.twig') }}
 {% endblock %}
